Fix visibility of Sort By dropdown

--- a/client/main.styl
+++ b/client/main.styl
@@ -30,6 +30,8 @@ nav
   a, a:visited { color: inherit !important }
 
 .sidebar
+  .card
+    overflow: visible !important  // allow Sort By to spill out of card
   .card-header
     padding: 0.25rem // 0.75rem
     text-align: center
